Marco tareas completadas

--- a/tareas.html
+++ b/tareas.html
@@ -7,11 +7,11 @@
 <body>
     <h1>Mis tareas de la semana</h1>
     <ul>
-        <li>Hacer la tarea de matemática</li>
-        <li>Estudiar para el examen de github</li>
+        <li><del>Estudiar para el examen de github</del></li>
         <li>Ordenar mi pieza</li>
-        <li>Practicar el aim 1 hora</li>
-        <li>Bañar a mi perrita</li>
+        <li><del>Practicar el aim 1 hora</del></li>
+        <li>Bañar a mi perrita (completado)</li>
+        <li>Hacer la tarea de matemática</li>
     </ul>
 </body>
 </html>
